# lexing-parsing

./: dune-project  exercises.md  lexparse.opam
lib/: dfa.ml  dfa.mli  dune  intfs.ml  lexers.ml  lexers.mli  mlot.ml  nfa.ml  nfa.mli  regex.ml  regex.mli  tdfa.ml  tdfa.mli  tnfa.ml  tnfa.mli
lib/lexers/: combinator.ml  combinator.mli  generator.ml  recogniser.ml  recogniser.mli
lib/lexing/: combinators.ml  combinators.mli  generators.ml  generators.mli
lib/parsing/: combinators.ml  descent.ml
test/: dune  test_combinator_lexer.ml  test_combinator_recogniser.ml  test_descent_parser.ml  test_generator_lexer.ml  test_generator_recogniser.ml  test_lexer_combinator.ml  test_lexer_recogniser.ml  test_nfa.ml  test_parse_combinator_descent.ml  test_parse_descent.ml  test_regex.ml  test_tnfa.ml
